# Workflows

./: LICENSE  README.md  USAGE_GUIDE.md  main.py  pyproject.toml  replay.py
screen_data/: screen_activity.db
src/: main.py  record.py  test.py  workflow_analyzer.py  workflow_replayer.py
