[project]
name = "workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pattern>=0.0.1a0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pytesseract>=0.3.13",
    "rumps>=0.4.0",
    "scikit-learn>=1.7.0",
    "screeninfo>=0.8.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
]
